navbar gap fixed

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ textarea {
 }
 /* Navbar */
 .navbar {
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   background-color: #049074;
 }
 
